--- a/Fase-2/Design.html
+++ b/Fase-2/Design.html
@@ -7,6 +7,76 @@
     <title>Objeto Virtual de Aprendizaje</title>
 </head>
 <body>
-    <header><h1>Sintaxis y Selectores CSS, Interacción Humano Ordenador</h1></header>
+    <header>
+        <h1>Aprendiendo Sintaxis CSS3, Selectores CSS3, Interacción Humano Ordenador</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>Inicio</li>
+            <li>Temas
+                <ul>
+                    <li>Sintaxis CSS3</li>
+                    <li>Selectores CSS</li>
+                    <li>Interacción Humano Ordenador</li>
+                </ul>
+            </li>
+            <li>Herramientas</li>
+            <li>Información Complementaria</li>
+            <li>Ayuda</li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2>Propósito</h2>
+        <p>
+            El propósitos de este sitio es realizar el estudio de algunos conceptos básicos de las CSS, para facilitar su comprensión y uso, principalmente orientando hacia el fortalecimiento de competencias que se requieren para en el adecuado diseño de sitios web, y que estos puedan estar a la altura de las exigencias actuales. 
+        </p>
+    </section>
+
+<article>
+    <h2>Sintaxis CSS3</h2>
+    <p>
+        Según Recio (2016) Las CSS (coding style sheets) u hojas de estilo en cascada son los archivos responsables de defnir la apariencia de una página web. Facilitan la gestión y la apariencia corporativa de un sitio web, ya que todas las páginas de un sitio pueden compartir la misma hoja de estilos y los cambios de apariencia quedan centralizados es estos archivos.
+
+        Con el uso de CSS3 se siguien ciertas reglas, las cuales se cuentan de los siguientes elementos: 
+    </p>
+    <li>Selectores: indica a qué elementos se va a aplicar la regla. Pueden escribirse varios selectores para la misma regla separados por comas</li>
+    <li>Lista de Declaraciones: los estilos que se van a aplicar a los elementos que cumplen la regla.</li>
+
+    <h2>Selectores CSS</h2>
+    <p>
+        los estilos que se van a aplicar a los elementos que cumplen la regla, los más usados son: 
+    </p>
+    <li>Selector Universal: Se defne con * y se aplica a todos los elementos de la página.</li>
+    <li>Selector de etiqueta HTML: Indica el estilo que se va a un elemento o etiqueta concreto.</li>
+    <li>Selector de clase: Podemos aplicar una regla a todos los elementos que sean de una determinada clase</li>
+    <li>Selector de identificador: Permiten aplicar un estilo único al único elemento de la página que tiene un determinado identifcador (especicado con el atributo id). El selector se especifíca con # y el nombre del identicador.</li>
+    <li>Selectores descendentes y adyacentes: Permiten seleccionar elementos contenidos dentro de otros de acuerdo a la estructura en árbol del DOM.</li>
+    <li>Selectores de atributos: Se utilizan para seleccionar elementos en función de sus atributos</li>
+    <li>Selectores en acción: </li>
+    <li></li>
+    <h2>Interacción Humano Ordenador</h2>
+    <p>
+        JavaScript es la tecnología que permite la interacción con el usuario. La estandarización de JavaScript con HTML5 en todos los navegadores nos permite crear innumerables tipos de aplicaciones web que pueden ejecutarse en cualquier plataforma (tanto de escritorio como móvil).
+    </p>
+    <p>
+        Estas aplicaciones se ejecutan en el cliente, es decir, en el navegador de los usuarios, mientras se mantiene la comunicación asíncrona con el servidor en segundo plano. De esta forma es posible realizar cambios sobre las páginas sin necesidad de recargarlas, mejorando la interactividad, velocidad y usabilidad en las aplicaciones.
+    </p>
+    <img src="imagenes/css3.png" alt="imagen" width="400" height="400">
+</article>
+
+
+<h5>
+    Mi Mockup
+</h5>
+<img src="" alt="Esta es la imagen del Mockup">
+
+<footer>
+    <p>
+        Correo: wemosqueram@unadvirtual.edu.co
+        Skype: wemhack
+        Fecha: 06/03/2022
+    </p>
+</footer>
 </body>
 </html>
