--- a/Fase-2/Design.html
+++ b/Fase-2/Design.html
@@ -45,7 +45,7 @@
 
     <h2>Selectores CSS</h2>
     <p>
-        los estilos que se van a aplicar a los elementos que cumplen la regla, los más usados son: 
+        Según Recio (2016) los estilos que se van a aplicar a los elementos que cumplen la regla, los más usados son: 
     </p>
     <li>Selector Universal: Se defne con * y se aplica a todos los elementos de la página.</li>
     <li>Selector de etiqueta HTML: Indica el estilo que se va a un elemento o etiqueta concreto.</li>
@@ -69,7 +69,7 @@
 <h5>
     Mi Mockup
 </h5>
-<img src="" alt="Esta es la imagen del Mockup">
+<img src="imagenes/Mockup.png" alt="Esta es la imagen del Mockup" width="500" height="700">
 
 <footer>
     <p>
