--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<h1>Proyecto de sitio web - 2022 I PERIODO 16-01 (1141)</h1>
-<h3>WILLIAN EMIR MOSQUERA MORENO</h3>
-<h3>INGENIERÍA DE SISTEMAS</h3>
-<h3>12/02/2022</h3>
-<h3>wemosqueram@unadvirtual.edu.co</h3>
-<h3>wemhack</h3>
-<h3>3117357357</h3>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Proyecto de sitio web - 2022 I PERIODO 16-01 (1141)</h1>
+    <h3>WILLIAN EMIR MOSQUERA MORENO</h3>
+    <h3>INGENIERÍA DE SISTEMAS</h3>
+    <h3>12/02/2022</h3>
+    <h3>wemosqueram@unadvirtual.edu.co</h3>
+    <h3>wemhack</h3>
+    <h3>3117357357</h3>
+    <a href="fase-2/Design.html"> Fase 2 </a>
+</body>
+</html>
