--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h3>wemhack</h3>
     <h3>3117357357</h3>
     <h5>---</h5>
-    <a href="fase-2/Design.html"> Fase 2 </a>
+    <a href="Fase-2/Design.html"> Fase 2 </a>
 </body>
 </html>
