--- a/Fase-3/multimediaSelectores.html
+++ b/Fase-3/multimediaSelectores.html
@@ -17,38 +17,32 @@
     </header>
     <nav>
         <ul class="Menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="index.html">Temas</a>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Temas</a>
                 <ul>
-                    <li><a href="sintaxis.html">Sintaxis CSS3</a></li>
-                    <li><a href="selectores.html">Selectores CSS</a></li>
+                    <li><a href="">Sintaxis CSS3</a></li>
+                    <li><a href="">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="index.html">Recursos Multimedia</a>
+            <li><a href="">Recursos Multimedia</a>
                 <ul>
-                    <li><a href="multimediaSintaxis.html">Sintaxis CSS3</a></li>
-                    <li><a href="multimediaSelectores.html">Selectores CSS</a></li>
+                    <li><a href="">Sintaxis CSS3</a></li>
+                    <li><a href="">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="index.html">Recursos Complementarios</a>
+            <li><a href="">Recursos Complementarios</a>
                 <ul>
-                    <li><a href="index.html">Test sobre Sintaxis CSS3</a></li>
-                    <li><a href="index.html">Test sobre Selectores CSS</a></li>
+                    <li><a href="">Test sobre Sintaxis CSS3</a></li>
+                    <li><a href="">Test sobre Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="autor.html">Acerca del Autor</a></li>
+            <li><a href="">Acerca de</a></li>
         </ul>
     </nav>
     <section>
         <article>
-            <h2>Propósito</h2>
-                <p>
-                    El propósitos de este sitio es realizar el estudio de algunos conceptos básicos de las CSS, para facilitar su comprensión y uso, principalmente orientando hacia el fortalecimiento de competencias que se requieren para en el adecuado diseño de sitios web, y que estos puedan estar a la altura de las exigencias actuales. 
-                </p>
-            <h2>Introducción a las temáticas</h2>
-                <p>
-                    Texto de la introducción a las temáticas
-                </p>
+            <h2>Herramientas Multimedia</h2>
+
         </article>
 
         <aside>
