--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <h3>3117357357</h3>
     <h5>---</h5>
     <a href="Fase-2/Design.html"> Fase 2 </a>
+    <br><br>
+    <a href="Fase-3/index.html"> Fase 3 </a>
 </body>
 </html>
