--- a/Fase-3/index.html
+++ b/Fase-3/index.html
@@ -47,7 +47,7 @@
                 </p>
             <h2>Introducción a las temáticas</h2>
                 <p>
-                    Texto de la introducción a las temáticas
+                    Lo primero que veremos, tiene que ver con algunas acepciones conceptuales de la sintaxis que se utiliza en las CSS, en combinación con HTML5; más adelante se realiza un trabajo similar, pero en esta ocasión con los selectores, cuya comprensión es vital en el diseño de sitios web, como contenido adisional, se presenta contenido multimedia, como apoyo para el proceso de lectura y análisis de los temas mencionados.
                 </p>
         </article>
 
