--- a/Fase-3/selectores.html
+++ b/Fase-3/selectores.html
@@ -17,26 +17,26 @@
     </header>
     <nav>
         <ul class="Menu">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Temas</a>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="index.html">Temas</a>
                 <ul>
-                    <li><a href="">Sintaxis CSS3</a></li>
-                    <li><a href="">Selectores CSS</a></li>
+                    <li><a href="sintaxis.html">Sintaxis CSS3</a></li>
+                    <li><a href="selectores.html">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Recursos Multimedia</a>
+            <li><a href="index.html">Recursos Multimedia</a>
                 <ul>
-                    <li><a href="">Sintaxis CSS3</a></li>
-                    <li><a href="">Selectores CSS</a></li>
+                    <li><a href="multimediaSintaxis.html">Sintaxis CSS3</a></li>
+                    <li><a href="multimediaSelectores.html">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Recursos Complementarios</a>
+            <li><a href="index.html">Recursos Complementarios</a>
                 <ul>
-                    <li><a href="">Test sobre Sintaxis CSS3</a></li>
-                    <li><a href="">Test sobre Selectores CSS</a></li>
+                    <li><a href="index.html">Test sobre Sintaxis CSS3</a></li>
+                    <li><a href="index.html">Test sobre Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Acerca de</a></li>
+            <li><a href="autor.html">Acerca del Autor</a></li>
         </ul>
     </nav>
     <section>
@@ -46,12 +46,12 @@
                     <p>
                         Según Recio (2016) los estilos que se van a aplicar a los elementos que cumplen la regla, los más usados son: 
                     </p>
-                    <li>Selector Universal: Se defne con * y se aplica a todos los elementos de la página.</li>
-                    <li>Selector de etiqueta HTML: Indica el estilo que se va a un elemento o etiqueta concreto.</li>
-                    <li>Selector de clase: Podemos aplicar una regla a todos los elementos que sean de una determinada clase</li>
-                    <li>Selector de identificador: Permiten aplicar un estilo único al único elemento de la página que tiene un determinado identifcador (especicado con el atributo id). El selector se especifíca con # y el nombre del identicador.</li>
-                    <li>Selectores descendentes y adyacentes: Permiten seleccionar elementos contenidos dentro de otros de acuerdo a la estructura en árbol del DOM.</li>
-                    <li>Selectores de atributos: Se utilizan para seleccionar elementos en función de sus atributos</li>
+                        <li>Selector Universal: Se defne con * y se aplica a todos los elementos de la página.</li>
+                        <li>Selector de etiqueta HTML: Indica el estilo que se va a un elemento o etiqueta concreto.</li>
+                        <li>Selector de clase: Podemos aplicar una regla a todos los elementos que sean de una determinada clase.</li>
+                        <li>Selector de identificador: Permiten aplicar un estilo único al único elemento de la página que tiene un determinado identifcador (especicado con el atributo id). El selector se especifíca con # y el nombre del identicador.</li>
+                        <li>Selectores descendentes y adyacentes: Permiten seleccionar elementos contenidos dentro de otros de acuerdo a la estructura en árbol del DOM.</li>
+                        <li>Selectores de atributos: Se utilizan para seleccionar elementos en función de sus atributos.</li>
                 </p>
         </article>
 
