--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h3>wemhack</h3>
     <h3>3117357357</h3>
     <h5>---</h5>
-    <a href="Fase-2/Design.html"> Fase 2 </a>
-    <br><br>
-    <a href="Fase-3/index.html"> Fase 3 </a>
+    <a href="Fase-2/Design.html"> <h2>Fase 2</h2> </a>
+    <br>
+    <a href="Fase-3/index.html"> <h2>Fase 3</h2>  </a>
 </body>
 </html>
