--- a/Fase-3/autor.html
+++ b/Fase-3/autor.html
@@ -17,26 +17,26 @@
     </header>
     <nav>
         <ul class="Menu">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Temas</a>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="index.html">Temas</a>
                 <ul>
-                    <li><a href="">Sintaxis CSS3</a></li>
-                    <li><a href="">Selectores CSS</a></li>
+                    <li><a href="sintaxis.html">Sintaxis CSS3</a></li>
+                    <li><a href="selectores.html">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Recursos Multimedia</a>
+            <li><a href="index.html">Recursos Multimedia</a>
                 <ul>
-                    <li><a href="">Sintaxis CSS3</a></li>
-                    <li><a href="">Selectores CSS</a></li>
+                    <li><a href="multimediaSintaxis.html">Sintaxis CSS3</a></li>
+                    <li><a href="multimediaSelectores.html">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Recursos Complementarios</a>
+            <li><a href="index.html">Recursos Complementarios</a>
                 <ul>
-                    <li><a href="">Test sobre Sintaxis CSS3</a></li>
-                    <li><a href="">Test sobre Selectores CSS</a></li>
+                    <li><a href="index.html">Test sobre Sintaxis CSS3</a></li>
+                    <li><a href="index.html">Test sobre Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Acerca de</a></li>
+            <li><a href="autor.html">Acerca del Autor</a></li>
         </ul>
     </nav>
     <section>
