--- a/Fase-3/sintaxis.html
+++ b/Fase-3/sintaxis.html
@@ -17,26 +17,26 @@
     </header>
     <nav>
         <ul class="Menu">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Temas</a>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="index.html">Temas</a>
                 <ul>
-                    <li><a href="">Sintaxis CSS3</a></li>
-                    <li><a href="">Selectores CSS</a></li>
+                    <li><a href="sintaxis.html">Sintaxis CSS3</a></li>
+                    <li><a href="selectores.html">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Recursos Multimedia</a>
+            <li><a href="index.html">Recursos Multimedia</a>
                 <ul>
-                    <li><a href="">Sintaxis CSS3</a></li>
-                    <li><a href="">Selectores CSS</a></li>
+                    <li><a href="multimediaSintaxis.html">Sintaxis CSS3</a></li>
+                    <li><a href="multimediaSelectores.html">Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Recursos Complementarios</a>
+            <li><a href="index.html">Recursos Complementarios</a>
                 <ul>
-                    <li><a href="">Test sobre Sintaxis CSS3</a></li>
-                    <li><a href="">Test sobre Selectores CSS</a></li>
+                    <li><a href="index.html">Test sobre Sintaxis CSS3</a></li>
+                    <li><a href="index.html">Test sobre Selectores CSS</a></li>
                 </ul>
             </li>
-            <li><a href="">Acerca de</a></li>
+            <li><a href="autor.html">Acerca del Autor</a></li>
         </ul>
     </nav>
     <section>
@@ -44,8 +44,6 @@
             <h2>Sintaxis</h2>
                 <p>
                     Según Recio (2016) Las CSS (coding style sheets) u hojas de estilo en cascada son los archivos responsables de defnir la apariencia de una página web. Facilitan la gestión y la apariencia corporativa de un sitio web, ya que todas las páginas de un sitio pueden compartir la misma hoja de estilos y los cambios de apariencia quedan centralizados es estos archivos.
-
-                    Con el uso de CSS3 se siguien ciertas reglas, las cuales se cuentan de los siguientes elementos:
                 </p>
                 <p>
 
