--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Proyecto de sitio web - 2022 I PERIODO 16-01 (1141)</h1>
+    <h1>Proyecto de sitio web - 2022 I PERIODO 16 - 01 (1141)</h1>
     <h3>WILLIAN EMIR MOSQUERA MORENO</h3>
     <h3>INGENIERÍA DE SISTEMAS</h3>
     <h3>12/02/2022</h3>
